-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 2.7.1
-
None
-
688740cf803af51aadcaf7f13099c57b655bb150
When you use the bundling deployment mechanism, it will copy a set of files into assets. These will not be cleaned up when switching to a different deployment method, causing the apk to contain additional unused files.
- is required for
-
QTBUG-31105 Qt 5.1 RC1 release tasks
-
- Closed
-