Remove managed subdirectories in assets when deploying to Android

We need to make sure there aren't left-over subdirectories in the
assets/ folder when you have used the bundling mechanism for
deployment.

To make this easier, we fix a bug where a missing slash
would cause multiple libraryPrefix() directories with different
suffixes under assets/ instead of just a single one containing
everything managed by creator. When the slash is added we can
simply remove the whole "assets/" + libraryPrefix() directory
recursively.

Task-number: QTCREATORBUG-9294
Change-Id: Ie24b55680d247df458bc70bbc15abdce51605627
Reviewed-by: Daniel Teske <daniel.teske@digia.com>